--- a/env/myblog/templates/post_detail.html
+++ b/env/myblog/templates/post_detail.html
@@ -1,6 +1,13 @@
 <!--DOCTYPE html-->
 <html>
 <body>
+  {% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
   <h1>{{ title }} is my home_page</h1>
 <a href='{{get_absolute_url}}' </a><br/>
   {{instance.title}} <br/>
