--- a/env/myblog/templates/base.html
+++ b/env/myblog/templates/base.html
@@ -1,15 +1,15 @@
 <!--DOCTYPE html-->
 <html>
+<head>
+  <title>{% block head_title %} My Blog {% endblock head_title %}</title>
+  <style>{% block style %} {% endblock style %}</style>
+</head>
+
 <body>
-  {% block content}
-  <h1>{{ title }} is my home_page</h1>
-  {% for obj in obj_list %}
-  {{obj.title}} <br>
-  {{obj.content}} <br>
-  {{obj.update}} <br>
-  {{obj.timestamp}} <br>
-  {{obj.id}} <br>
-  {% endfor %}
-  {}
+{% include "messages_display.html" %}
+<div class='container'>
+{% block content %}
+{% endblock content %}
+</div>
 </body>
 </hrml>
