--- a/env/myblog/templates/post_form.html
+++ b/env/myblog/templates/post_form.html
@@ -1,11 +1,12 @@
 <!--DOCTYPE html-->
-<html>
-<body>
-  <h1>Form</h1>
-  <form action='' method='POST'>
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type='submit' value='New Post' />
-    </form>
-</body>
-</hrml>
+{% extends 'base.html' %}
+
+{% block content %}
+<h1>Form</h1>
+<form action='' method='POST'>
+  {% csrf_token %}
+  {{ form.as_p }}
+  <input type='submit' value='New Post' />
+</form>
+
+{% endblock content %}
