--- a/env/myblog/templates/base.html
+++ b/env/myblog/templates/base.html
@@ -1,15 +1,17 @@
 <!--DOCTYPE html-->
+{% load staticfiles %}
 <html>
 <head>
   <title>{% block head_title %} My Blog {% endblock head_title %}</title>
+  <link rel="stylesheet" href="{% static "css/base.css" %}"
   <style>{% block style %} {% endblock style %}</style>
 </head>
 
 <body>
 {% include "messages_display.html" %}
-<div class='container'>
+<div class="container">
 {% block content %}
 {% endblock content %}
 </div>
 </body>
-</hrml>
+</html>
