add bootstrap but doesnt work well, may need to add jquery library for support, and the /post/create bug still unsolved

--- a/env/myblog/templates/post_detail.html
+++ b/env/myblog/templates/post_detail.html
@@ -1,20 +1,13 @@
 <!--DOCTYPE html-->
 {% extends "base.html" %}
-{% block head_title %} {{instance.title}} | {{ block.super }} {% endblock head_title %}
+{% block head_title %}
+{{instance.title}} | {{ block.super }}
+{% endblock head_title %}
 
-<style>
-{% block style %}
-<h1>
-  {color: #8888;}
-{% endblock style %}
-</style>
 
 {% block content %}
-<h1>{{ title }}</h1>
-{{instance.title}} <br/>
-{{instance.content}} <br/>
-{{instance.update}} <br/>
-{{instance.timestamp}} <br/>
-{{instance.id}} <br/>
-
+<div class='col-sm-6 col-sm-offset-3'>
+<h1>{{ title }} <small>{{ instance.timestamp }}</small></h1>
+{{instance.content | linebreaks }} <br>
+</div>
 {% endblock %}
