--- a/env/myblog/templates/post_list.html
+++ b/env/myblog/templates/post_list.html
@@ -1,13 +1,25 @@
 {% extends "base.html" %}
-
 {% block content %}
+<div class='col-sm-6 col-sm-offset-3' >
 <h1>{{ title }}</h1>
-{% for obj in obj_list %}
-/post/id/
-{{obj.title}} <br>
-{{obj.content}} <br>
-{{obj.update}} <br>
-{{obj.timestamp}} <br>
-{{obj.id}} <br>
+<div class="row">
+{% for obj in object_list %}
+
+  <div class="col-sm-12">
+    <div class="thumbnail">
+      <!-- <img src="..." alt="..."> -->
+      <div class="caption">
+        <h3><a href='{{ obj.get_absolute_url }}'> {{ obj.title }}</a> <small>{{obj.timestamp|timesince}} </small></h3>
+        <p>{{obj.content|linebreaks|truncatechars:120}} </p>
+        <p><a href="{{ obj.get_absolute_url }}" class="btn btn-primary" role="button">View</a></p>
+      </div>
+    </div>
+  </div>
+<hr>
+</div>
+
+{% cycle "" "<div class='col-sm-12'><hr/></div></div><div class='row'>" %}
 {% endfor %}
-{% endblock content %}
+</div>
+</div>
+{% endblock %}
