--- a/env/myblog/templates/post_list.html
+++ b/env/myblog/templates/post_list.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
+
 <div class='col-sm-6 col-sm-offset-3' >
-<h1>{{ title }}</h1>
+  <h1>{{ title }}</h1>
 <div class="row">
-{% for obj in object_list %}
+{% for obj in obj_list %}
 
   <div class="col-sm-12">
     <div class="thumbnail">
@@ -15,8 +16,6 @@
       </div>
     </div>
   </div>
-<hr>
-</div>
 
 {% cycle "" "<div class='col-sm-12'><hr/></div></div><div class='row'>" %}
 {% endfor %}
