--- a/env/myblog/templates/post_detail.html
+++ b/env/myblog/templates/post_detail.html
@@ -9,6 +9,9 @@
 <div class='col-sm-6 col-sm-offset-3'>
     <img src='{{ instance.image.url }}' class='img-responsive' />
 <h1>{{ title }} <small>{{ instance.timestamp }}</small></h1>
+<a href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_url}}">
+Facebook
+</a>
 {{instance.content | linebreaks }} <br>
 </div>
 {% endblock %}
