--- a/env/myblog/templates/post_detail.html
+++ b/env/myblog/templates/post_detail.html
@@ -9,9 +9,17 @@
 <div class='col-sm-6 col-sm-offset-3'>
     <img src='{{ instance.image.url }}' class='img-responsive' />
 <h1>{{ title }} <small>{{ instance.timestamp }}</small></h1>
-<a href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_url}}">
+{% if instance.user.get_full_name %}
+<p>Author: {{ instance.user.get_full_name }}</p>
+{% endif %}
+<p><div class="fb-like" data-href="{{ request.build_absolute_url }}" data-layout="standard" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
+<hr/>
+</p>
+
+<p><a href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_url}}">
 Facebook
-</a>
+</a></p>
 {{instance.content | linebreaks }} <br>
+<div class="fb-comments" data-href="{{ request.build_absolute_url }}" data-numposts="5"></div>
 </div>
 {% endblock %}
