--- a/env/myblog/templates/post_detail.html
+++ b/env/myblog/templates/post_detail.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div class='col-sm-6 col-sm-offset-3'>
     <img src='{{ instance.image.url }}' class='img-responsive' />
-<h1>{{ title }} <small>{{ instance.timestamp }}</small></h1>
+<h1>{{ title }} <small> {% if instance.draft %} </span style='color:red;'>Draft</span> {{ instance.publish }}</small></h1>
 {% if instance.user.get_full_name %}
 <p>Author: {{ instance.user.get_full_name }}</p>
 {% endif %}
