--- a/env/myblog/templates/post_list.html
+++ b/env/myblog/templates/post_list.html
@@ -12,7 +12,7 @@
       <img src='{{ instance.image.url }}' class='img-responsive' />
       {% endif %}
       <div class="caption">
-        <h3><a href='{{ obj.get_absolute_url }}'> {{ obj.title }}</a> <small>{{obj.timestamp|timesince}} </small></h3>
+        <h3><a href='{{ obj.get_absolute_url }}'> {{ obj.title }}</a> <small>{{obj.publish|timesince}} </small></h3>
         {% if obj.user.get_full_name %}
         <p>{{ obj.user.get_full_name }}</p>
         {% endif %}
