--- a/env/myblog/templates/post_list.html
+++ b/env/myblog/templates/post_list.html
@@ -3,6 +3,10 @@
 
 <div class='col-sm-6 col-sm-offset-3' >
   <h1>{{ title }}</h1>
+<form method='GET' action=''>
+  <input type='text' name='q' placeholder='Search posts' value='{{ request.GET.q }}'/>
+  <input type='submit' value='Search'/>
+</form>
 <div class="row">
 {% for obj in obj_list %}
 
@@ -29,7 +33,7 @@
 <div class="pagination">
     <span class="step-links">
         {% if contacts.has_previous %}
-            <a href="?{{page_request_var}}={{ contacts.previous_page_number }}">previous</a>
+            <a href="?{{page_request_var}}={{ contacts.previous_page_number }}&q={{ request.GET.q }}">previous</a>
         {% endif %}
 
         <span class="current">
@@ -37,7 +41,7 @@
         </span>
 
         {% if contacts.has_next %}
-            <a href="?{{page_request_var}}={{ contacts.next_page_number }}">next</a>
+            <a href="?{{page_request_var}}={{ contacts.next_page_number }}&q={{ request.GET.q }}">next</a>
         {% endif %}
     </span>
 </div>
